# redash-searcher

./: .env.sample  .gitignore  .tagpr  CHANGELOG.md  Cargo.toml  README.md  compose.yml  docker-compose.yml  renovate.json
.github/workflows/: deploy-images.yml  post-tagpr.yml  release-drafter.yml  tagpr.yml
redash-search-api/: Cargo.toml
redash-search-api/src/: app.rs  configs.rs  lib.rs  main.rs  redash.rs
redash-search-sync/: Cargo.toml  Dockerfile
redash-search-sync/src/: app.rs  configs.rs  main.rs  redash.rs
redash-search-web/: .prettier  Dockerfile  next.config.js  package.json  tsconfig.json
redash-search-web/components/: HighlightedQuery.tsx  HitList.tsx  Search.tsx  index.jsx
redash-search-web/hocs/: withApollo.js
redash-search-web/lib/: apolloClient.ts
redash-search-web/pages/: Search.tsx  _app.jsx  _app.tsx  index.jsx  index.tsx
redash-search-web/pages/api/: graphql.js  graphql.ts  models.ts
redash-searcher-sync/: Cargo.toml  Dockerfile
redash-searcher-sync/src/: app.rs  configs.rs  lib.rs  main.rs  parser.rs  redash.rs  serde.rs
redash-searcher-web/: Dockerfile  entrypoint.sh  next.config.js  package.json  styles.css  tsconfig.json
redash-searcher-web/components/: App.tsx  HighlightedQuery.tsx  Hit.tsx  HitList.tsx
redash-searcher-web/pages/: _app.tsx  index.tsx
redash-searcher-web/pages/api/: graphql.ts  models.ts  search.test.ts  search.ts
