[package]
name = "redash-searcher-sync"

edition = "2021"
version = "0.2.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.75", features = ["backtrace"]}
async-trait = "0.1.74"
chrono = {version = "0.4.31", features = ["serde"]}
config = "0.15.0"
humantime = "2.1.0"
hyper = {version = "0.14", features = ["full"]}
maplit = "1.0.2"
once_cell = "1.17.2"
opensearch = "2.0.0"
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
tokio = {version = "1.27.0", features = ["full"]}
tonic = "0.12.0"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["json", "env-filter"]}
